2005-03-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_row_selected):
	* src/callbacks.h:
	* src/infoview.c: (expander_get_label), (expander_callback),
	(infoview_create), (infoview_update):
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (create_main_window),
	(do_popup_menu), (update_sensitivity):
	* src/interface.h:
	* src/procman.h:
	* src/proctable.c: (proctable_new): GtkExpander love :)

2005-03-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c:
	* src/callbacks.h:
	* src/favorites.c:
	* src/favorites.h:
	* src/infoview.h:
	* src/interface.c:
	* src/interface.h:
	* src/load-graph.h:
	* src/memmaps.c:
	* src/memmaps.h:
	* src/openfiles.c:
	* src/openfiles.h:
	* src/prettytable.c:
	* src/procactions.c:
	* src/procdialogs.c:
	* src/proctable.c:
	* src/util.c: Fixed #includes.

2005-03-16  Benoît Dejean  <TazForEver@dlfp.org>

	* src/gnome-system-monitor.schemas.in:
	* src/interface.c: (create_disk_view), (create_sys_view),
	(create_main_window):
	* src/interface.h:
	* src/procdialogs.c: (procdialog_create_preferences_dialog):
	* src/procman.c: (procman_data_new), (procman_save_config):
	* src/procman.h: Moved the device list to a seperate tab.
	Removed gconf key that saved the pane position.

2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (format_duration_for_display),
	(update_info_mutable_cols): top-like time format.

2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.c: (procman_data_new):
	* src/procman.h:
	* src/proctable.c: (sort_ints), (proctable_new),
	(update_info_mutable_cols), (insert_info_to_tree), (update_info),
	(get_info):
	* src/proctable.h: Added a new col that displays cpu time.
	Also merged duplicate functions.
	glibtop_get_proc_time() is called only once per process on every update.

2005-03-15  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h: changed type of procdata->memxserver as libwnck's uses
	an unsigned long not a guint64.
