@@ -1,3 +1,7 @@
+2005-03-18  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/callbacks.c: (cb_switch_page): Fixed.
+
 2005-03-17  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/callbacks.c: (cb_row_selected):
